--- a/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
+++ b/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
@@ -194,12 +194,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Content\js\libs\jquery.signalR-1.1.2.js" />
     <EmbeddedResource Include="Content\js\libs\jquery.signalR-1.1.2.min.js" />
-    <Content Include="Content\js\libs\shortcut.js" />
-    <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.6.4.js" />
-    <Content Include="Scripts\jquery-1.6.4.min.js" />
-    <Content Include="Scripts\jquery.signalR-1.1.2.js" />
-    <Content Include="Scripts\jquery.signalR-1.1.2.min.js" />
+    <EmbeddedResource Include="Content\js\libs\shortcut.js" />
+    <EmbeddedResource Include="Scripts\jquery-1.6.4-vsdoc.js" />
+    <EmbeddedResource Include="Scripts\jquery-1.6.4.js" />
+    <EmbeddedResource Include="Scripts\jquery-1.6.4.min.js" />
+    <EmbeddedResource Include="Scripts\jquery.signalR-1.1.2.js" />
+    <EmbeddedResource Include="Scripts\jquery.signalR-1.1.2.min.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
