--- a/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
+++ b/src/Inceptum.AppServer.Sdk/Inceptum.AppServer.Sdk.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Model\ApplicationInstanceInfo.cs" />
     <Compile Include="Model\ApplicationParams.cs" />
     <Compile Include="Model\ApplicationVersion.cs" />
+    <Compile Include="Model\InstanceCommandSpec.cs" />
     <Compile Include="Model\InstanceConfig.cs" />
     <Compile Include="Monitoring\HbFeedProvider.cs" />
     <Compile Include="Monitoring\HostHbMessage.cs" />
