--- a/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
+++ b/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
@@ -201,6 +201,18 @@
     <EmbeddedResource Include="Scripts\jquery.signalR-1.1.2.js" />
     <EmbeddedResource Include="Scripts\jquery.signalR-1.1.2.min.js" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\js\libs\bootstrap-datepicker.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\js\templates\commandPopup.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\js\views\commandPopup.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\css\bootstrap-datepicker.css" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
