--- a/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
+++ b/src/Inceptum.AppServer.Management/Inceptum.AppServer.Management.csproj
@@ -213,6 +213,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Content\css\bootstrap-datepicker.css" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\js\libs\backbone-composite-keys.js" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
