--- a/src/Inceptum.AppServer.AppHost/packages.config
+++ b/src/Inceptum.AppServer.AppHost/packages.config
@@ -4,5 +4,6 @@
   <package id="Castle.Core-NLog" version="3.2.0" targetFramework="net40" />
   <package id="Castle.LoggingFacility" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" />
+  <package id="Mono.Cecil" version="0.9.5.4" targetFramework="net40" />
   <package id="NLog" version="2.1.0" targetFramework="net40" />
 </packages>
