--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -5,6 +5,7 @@
   <repository path="..\Inceptum.AppServer.Management\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk.Messaging\packages.config" />
   <repository path="..\Inceptum.AppServer.Sdk\packages.config" />
+  <repository path="..\Inceptum.AppServer.TestApp\packages.config" />
   <repository path="..\Inceptum.AppServer.Tests\packages.config" />
   <repository path="..\Inceptum.AppServer\packages.config" />
 </repositories>
