--- a/src/Inceptum.AppServer.Sdk/packages.config
+++ b/src/Inceptum.AppServer.Sdk/packages.config
@@ -4,5 +4,5 @@
   <package id="Castle.Core-NLog" version="3.2.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
+  <package id="NLog" version="4.2.3" targetFramework="net45" />
 </packages>
