--- a/src/Inceptum.AppServer.Tests/packages.config
+++ b/src/Inceptum.AppServer.Tests/packages.config
@@ -5,7 +5,7 @@
   <package id="Castle.Windsor" version="3.2.1" targetFramework="net40" requireReinstallation="True" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="NLog" version="2.1.0" targetFramework="net40" requireReinstallation="True" />
+  <package id="NLog" version="4.2.3" targetFramework="net45" />
   <package id="NuGet.Core" version="2.10.1" targetFramework="net45" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
